src/test/ui/lifetimes/borrowck-let-suggestion.nll.stderr
error[E0597]: borrowed value does not live long enough
  --> $DIR/borrowck-let-suggestion.rs:12:17
   |
LL |     let mut x = vec![1].iter();
   |                 ^^^^^^^       - temporary value only lives until here
   |                 |
   |                 temporary value does not live long enough
LL |     x.use_mut();
   |     - borrow later used here
   |
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
